--- a/variables.scss
+++ b/variables.scss
@@ -1,1 +1,7 @@
 // Variables
+$perspective-body : 2000px;
+$height-cellphone : 480px;
+$width-cellphone : 340px;
+$btn-inactive : #ef5350;
+$btn-active : #66bb6a;
+$cellphone-active : #fbc02d;
